# PuLID-Duffusers

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
pulid/: __init__.py  attention.py  attention_processors.py  core.py  encoders.py  pipeline.py  pipeline_creators.py  pipelines.py  pipelines_flux.py  pulid.py  utils.py
pulid_diffusers/: __init__.py  core.py  encoders.py  pipelines.py  pipelines_flux.py  utils.py
test/: sdxl_adapter.py
