[project]
name='pulid_diffusers'
version='0.1-beta'
description="A library that integrates PuLID with HuggingFace's Diffusers"
readme = "README.md"
authors=[
  { name="SmokDev" },
]
classifiers=[
    'Development Status :: 0.1 - Beta',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
license = {file = "LICENSE"}
dependencies = [
    "torch",
    "torchvision",
    "diffusers",
    "transformers",
    "opencv-python",
    "httpx",
    "einops",
    "ftfy",
    "facexlib",
    "insightface",
    "onnxruntime",
    "onnxruntime-gpu",
    "safetensors",
    "xformers",
    "apex",
    "timm",
    "numpy"
]

[project.urls]
Homepage = "https://github.com/ToTheBeginning/PuLID"
Documentation = "https://github.com/SmokDev/PuLID-Pipelines.git"
Repository = "https://github.com/SmokDev/PuLID-Pipelines.git"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"